--- a/History.txt
+++ b/History.txt
@@ -1,9 +1,10 @@
-== 0.1.2 2009-06-03
+== 0.1.2 2009-06-08
 
-* 2 major improvements
+* 3 major improvements
   * Add priorities to notifications (Michael Moen)
   * Add clear_terminal configuration option (Michael Moen)
-  
+  * Add show_modified_files configuration option (gsavage)
+
 == 0.1.1 2009-06-02
 
 * 1 major improvement
