--- a/README.rdoc
+++ b/README.rdoc
@@ -143,6 +143,7 @@ http://github.com/guides/fork-a-project-and-submit-your-modifications
 Thanks to the following folks who have contributed to this project:
 
 * Michael Moen
+* gsavage
 
 == LICENSE:
 
