--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,13 @@
+== 0.1.3 2009-07-23
+
+* 2 major improvements
+  * Better result analysis and more readable notifications
+  * Support for Growl on Windows
+* 3 minor improvement
+  * Move Cucumber notification to :ran_features hook
+  * Add one_notification_per_run configuration option
+  * Notification for undefined Cucumber scenarios/steps
+
 == 0.1.2 2009-06-08
 
 * 3 major improvements
