--- a/README.rdoc
+++ b/README.rdoc
@@ -16,7 +16,7 @@ priorities:
 
 * 2 for error or failed
 * 0 for info
-* -1 for pending or unknown
+* -1 for pending, undefined or unknown
 * -2 for passed
 
 Furthermore the terminal running autotest is cleared on every cycle (unless
@@ -32,8 +32,8 @@ might take a while though as autotest itself is currently misbehaving on Ruby
 
 == REQUIREMENTS:
 
-* Growl >= 1.1.4
-* ZenTest >= 4.1.0
+* Growl >= 1.1.5
+* ZenTest >= 4.1.3
 
 == INSTALL:
 
@@ -71,6 +71,13 @@ All tests have passed", add the following to your ~/.autotest:
 
   Autotest::Growl::hide_label = true
 
+=== One Notifications per Run
+
+Allow only one test and one feature notification per run by adding the
+following to your ~/.autotest:
+
+  Autotest::Growl::one_notification_per_run = true
+
 === Show Modified Files
 
 Add the following to your ~/.autotest if you would like to receive a Growl
@@ -94,12 +101,6 @@ To uninstall a specific version (e.g. 4.0.0), type:
 Or remove all outdated versions of all installed gems:
 
   sudo gem cleanup
-
-=== Missing Cucumber Notifications
-
-If you are using autotest-fsevent as well, the require statements are not
-ordered correctly. The require for autotest-fsevent must come after all
-other requires in your ~/.autotest.
 
 === Unreliable Growl Notifications
 
