Add Karl to the contributor list and history.

--- a/README.rdoc
+++ b/README.rdoc
@@ -146,6 +146,7 @@ Thanks to the following folks who have contributed to this project:
 
 * Michael Moen
 * Graham Savage
+* Karl O'Keeffe
 
 == LICENSE:
 
