--- a/History.txt
+++ b/History.txt
@@ -1,14 +1,14 @@
 == 0.1.4 2009-07-23
 
 * 1 major improvement
-  * Support for Windows
+  * Support for Windows (Karl O'Keeffe)
 
 == 0.1.3 2009-07-22
 
 * 1 major improvement
   * Better result analysis and more readable notifications
 * 3 minor improvement
-  * Move Cucumber notification to :ran_features hook
+  * Move Cucumber notification to :ran_features hook (Karl O'Keeffe)
   * Add one_notification_per_run configuration option
   * Notification for undefined Cucumber scenarios/steps
 
