--- a/History.txt
+++ b/History.txt
@@ -1,7 +1,7 @@
 == 0.1.5 2009-07-24
 
 * 1 major improvement
-  * Wrapper for grownotify to improve reliability (Karl O'Keefe)
+  * More reliable growlnotify call
 
 == 0.1.4 2009-07-23
 
