--- a/README.rdoc
+++ b/README.rdoc
@@ -131,8 +131,10 @@ You can install the bleeding-edge version as follows:
   sudo gem uninstall autotest-growl
   sudo gem install svoop-autotest-growl --source http://gems.github.com
 
-Bleeding-edge gems contain a fourth version digit ( the .8 in 0.1.5.8)
-to make sure Github builds the gem whenever new code is committed.
+Bleeding-edge gems contains a fourth version digit group (e.g. the .8 in 
+0.1.5.8) to make sure Github builds the gem whenever new code is committed.
+If there is no fourth version digit group, the edge version is identical
+to the stable version from Rubyforge.
 
 Please submit issues on:
 
