--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+== edge
+
+* 1 minor improvement
+  * Reset the postinstall text color to previous (Konstantin Haase)
+
 == 0.1.5 2009-07-27
 
 * 1 major improvement
