--- a/README.rdoc
+++ b/README.rdoc
@@ -24,12 +24,6 @@ configured otherwise). Don't worry though, it's still possible to scroll up
 to see the output of previous cycles - at least on the Terminal.app from
 Apple.
 
-=== Ruby 1.9.1 Note
-
-For the moment, autotest growl doesn't seem to work on Ruby 1.9.1. Fixing this
-might take a while though as autotest itself is currently misbehaving on Ruby
-1.9 - at least on my setup.
-
 == REQUIREMENTS:
 
 * Growl >= 1.1.5 (Mac OS X) or >= 2.0b18 (Windows) 
@@ -131,7 +125,7 @@ You can install the bleeding-edge version as follows:
   sudo gem uninstall autotest-growl
   sudo gem install svoop-autotest-growl --source http://gems.github.com
 
-Bleeding-edge gems contains a fourth version digit group (e.g. the .8 in 
+Bleeding-edge gems contain a fourth version digit group (e.g. the .8 in 
 0.1.5.8) to make sure Github builds the gem whenever new code is committed.
 If there is no fourth version digit group, the edge version is identical
 to the stable version from Rubyforge.
