--- a/README.rdoc
+++ b/README.rdoc
@@ -151,6 +151,7 @@ Thanks to the following folks who have contributed to this project:
 * Graham Savage
 * Karl O'Keeffe
 * Konstantin Haase
+* J. Edward Dewyea
 
 == LICENSE:
 
