--- a/README.rdoc
+++ b/README.rdoc
@@ -26,8 +26,10 @@ Apple.
 
 == REQUIREMENTS:
 
-* Growl >= 1.1.5 (Mac OS X) or >= 2.0b18 (Windows) OR libnotify + libnotify-bin (i.e. notify-send must be on your path) (Linux)
-* ZenTest >= 4.1.3
+* autotest >= 4.1.4
+* Growl >= 1.1.5 on Mac OS X   -or-
+* Growl for Windows >= 2.0b18 on Windows   -or-
+* libnotify >= 0.4.5 on Linux
 
 == INSTALL:
 
@@ -39,13 +41,17 @@ Then add the following line to your ~/.autotest file:
 
   require 'autotest/growl'
 
-Make sure Growl or libnotify is installed on your computer. You can download it from:
+Growl must be installed on your computer. You can download it from:
 
 Mac OS X: http://growl.info
 Windows:  http://growlforwindows.com
-Linux(libnotify): http://www.galago-project.org/news/index.php
 
-Make sure Zentest = 4.0.0 is NOT installed, as it has a lib 'autotest/growl' 
+On Linux you can use libnotify instead. The binary notify-send must be in
+your PATH:
+
+Linux:    http://www.galago-project.org
+
+Make sure Zentest <= 4.1.3 is NOT installed, as it has a lib 'autotest/growl' 
 that sometimes takes precedence.
 
 If you like this gem, please consider to recommend me on Working with
@@ -167,6 +173,7 @@ Thanks to the following folks who have contributed to this project:
 * Karl O'Keeffe
 * Konstantin Haase
 * J. Edward Dewyea
+* Martin Vielsmaier
 
 == LICENSE:
 
