--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+== 0.2.4 2010-04-28
+
+* 1 minor improvement
+  * Add support for sticky error notifications (Benjamin Ritcey)
+  
 == 0.2.3 2010-03-03
 
 * 1 minor improvement
