--- a/README.rdoc
+++ b/README.rdoc
@@ -197,7 +197,7 @@ Thanks to the following folks who have contributed to this project:
 * J. Edward Dewyea
 * Martin Vielsmaier
 * Charles Roper
-* Benjamin Ritcey
+* Ben Ritcey
 
 == LICENSE:
 
