--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+== 0.2.7 2010-10-29
+
+* 1 minor improvement
+  * Fix image path for cygwin (Patrick Aikens)
+
 == 0.2.6 2010-09-24
 
 * 1 minor improvement
