--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+== 0.2.9 2010-12-09
+
+* 1 minor improvement
+  * Remove -w flag but allow custom options
+
 == 0.2.8 2010-12-02
 
 * 2 minor improvements
