--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+== 0.2.11 2011-09-14
+
+* 1 minor improvement
+  * Improved growl images (Leif Eriksen)
+
 == 0.2.10 2011-02-25
 
 * 1 minor improvement
