--- a/README.rdoc
+++ b/README.rdoc
@@ -233,12 +233,13 @@ Thanks to the following folks who have contributed to this project:
 * Ben Ritcey
 * Patrick Aikens
 * Gordon Thiesfeld
+* Leif Eriksen
 
 == LICENSE:
 
 (The MIT License)
 
-Copyright (c) 2010 Sven Schwyn
+Copyright (c) 2011 Sven Schwyn
 
 Permission is hereby granted, free of charge, to any person obtaining
 a copy of this software and associated documentation files (the
