--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+== 0.2.12 2011-10-11
+
+* 1 minor improvement
+  * Use RbConfig instead of deprecated Config
+
 == 0.2.11 2011-09-14
 
 * 1 minor improvement
