--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+== 0.2.13 2011-10-18
+
+* 1 minor improvement
+  * Update growlnotify for Growl 1.3
+
 == 0.2.12 2011-10-11
 
 * 1 minor improvement
