--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+== 0.2.14 2011-10-21
+
+* 1 minor improvement
+  * Include old growlnotify for pre-Lion compatibility
+
 == 0.2.13 2011-10-18
 
 * 1 minor improvement
