--- a/README.rdoc
+++ b/README.rdoc
@@ -18,7 +18,8 @@ bundled with Mac OS X.
 == REQUIREMENTS:
 
 * any ZenTest compatible test suite
-* Growl >= 1.1.5 on Mac OS X   --OR--
+* Growl >=1.3 on Mac OS X >=10.7   --OR--
+* Growl >=1.1 and <1.3 on Mac OS <10.7   --OR--
 * Growl for Windows >= 2.0b18 on Windows   --OR--
 * libnotify >= 0.4.5 on Linux
 
@@ -190,7 +191,13 @@ of Mac OS X 10.5. If you experience this oddity, add the following to your
 
 If you are still on Leopard and notifications don't work for you, get your
 hands dirty and remove the "-n Autotest" argument from growl.rb. Make sure
-you submit a bug or comment on a related and existing bug, too. 
+you submit a bug or comment on a related and existing bug, too.
+
+=== Errors by growlnotify
+
+On Mac OS X make sure you have an adequate version of Growl installed:
+* Growl >=1.3 for Mac OS X >=10.7
+* Growl >=1.1.5 and <1.3 for Mac OS X <10.7
 
 === Strange Characters in Terminal
 
