--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,8 @@
+== 0.2.15 2011-11-02
+
+* 1 minor improvement
+  * Choose growlnotify based on installed Growl version
+
 == 0.2.14 2011-10-21
 
 * 1 minor improvement
